--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 .app-container {
   display: flex;
-  min-height: 100vh; /* 使布局高度充满屏幕 */
+  /* min-height: 100vh;  */
+  /* 使布局高度充满屏幕 */
+  /* width: 100%; */
+  height: 100vh;
 }
