--- a/src/components/Graph/Graph.css
+++ b/src/components/Graph/Graph.css
@@ -1,15 +1,17 @@
 .graph {
-  flex: 3; /* 占三份 */
-  min-width: 400px;
-  /* background-color:red; */
-  border-left: 1px solid #e0e0e0; /* 分隔线 */
-  transition: flex 0.3s ease; /* 添加过渡动画 */
+  flex: 1; 
+  background-color:red;
+  /* border-left: 1px solid #e0e0e0;  */
+  height: 100vh;
 }
+
 
 .graph .toolbar {
   width: 100%;
   height: 250px;
   background-color: #f0f4f9;
+  background-color:red;
+
   /* background-color: #e0e0e0; */
   display: flex;
   justify-content: space-around;
