--- a/src/components/Graph/Graph.css
+++ b/src/components/Graph/Graph.css
@@ -1,6 +1,6 @@
 .graph {
   flex: 1; 
-  background-color:red;
+  /* background-color:red; */
   /* border-left: 1px solid #e0e0e0;  */
   height: 100vh;
 }
@@ -10,7 +10,7 @@
   width: 100%;
   height: 250px;
   background-color: #f0f4f9;
-  background-color:red;
+  /* background-color:red; */
 
   /* background-color: #e0e0e0; */
   display: flex;
