--- a/src/components/KGraph20250115/KGraph/KGraph.css
+++ b/src/components/KGraph20250115/KGraph/KGraph.css
@@ -34,13 +34,13 @@
 
 .graph .hoverBox {
   width: 150px;
-  /* height: 170px; */
+  height: 170px;
   position: absolute; /* 子元素绝对定位，相对于父元素定位 */
   top: 50px;           
   right: 50px;          
   /* transform: translate(-50%, -50%);  */
   background-color: white;
-  padding: 0px 10px 20px 10px;
+  padding: 0px 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   z-index: 100;
@@ -208,4 +208,3 @@
     transform: translateY(0);
   }
 }
-
