--- a/src/components/KGraph/KGraph.css
+++ b/src/components/KGraph/KGraph.css
@@ -209,3 +209,19 @@
   }
 }
 
+.MyRangeSlider {
+  width: 300px;
+  height: 50px;
+  /* background-color: #000; */
+  border: 2px solid #000;
+  cursor: pointer;
+  /* font-size: 24px; */
+  position: absolute;
+  bottom: 100px;
+  right: 50px;
+  z-index: 100;
+  /* border-top-right-radius: 50%;
+  border-bottom-right-radius: 20px; */
+  /* border-radius: 50%; */
+  padding: 7px 10px;
+}
