--- a/src/components/KGraphTest/KGraphTest.css
+++ b/src/components/KGraphTest/KGraphTest.css
@@ -34,13 +34,13 @@
 
 .graph .hoverBox {
   width: 150px;
-  height: 170px;
+  /* height: 170px; */
   position: absolute; /* 子元素绝对定位，相对于父元素定位 */
   top: 50px;           
   right: 50px;          
   /* transform: translate(-50%, -50%);  */
   background-color: white;
-  padding: 0px 10px;
+  padding: 0px 10px 20px 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   z-index: 100;
@@ -115,8 +115,8 @@
 /************************输入框**********************/
 .search {
   position: absolute;
-  top: 30px;
-  left: 30px;
+  top: 50px;
+  left: 50px;
   height: 50px;
   /* background-color: red; */
   z-index: 100;
@@ -207,4 +207,21 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+.MyRangeSlider {
+  width: 300px;
+  height: 50px;
+  background-color: #fff;
+  border: 2px solid #000;
+  cursor: pointer;
+  /* font-size: 24px; */
+  position: absolute;
+  top: 200px;
+  left: 50px;
+  z-index: 100;
+  /* border-top-right-radius: 50%;
+  border-bottom-right-radius: 20px; */
+  /* border-radius: 50%; */
+  padding: 7px 10px;
 }
